# friendship

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
friendship/: __init__.py  __main__.py  conftest.py  settings.py  tkq.py
friendship/db/: base.py  config.py  utils.py
friendship/db/dao/: dummy_dao.py  friend_dao.py
friendship/db/migrations/: env.py
friendship/db/migrations/versions/: 2023-05-10-18-31_05c065750977.py
friendship/db/models/: __init__.py  category.py  dummy_model.py  friend.py
friendship/services/: __init__.py
friendship/tests/: __init__.py  test_dummy.py
friendship/web/: __init__.py  application.py  lifetime.py
friendship/web/api/: __init__.py  router.py
friendship/web/api/dummy/: __init__.py  views.py
friendship/web/api/echo/: __init__.py  views.py
friendship/web/api/friend/: __init__.py  schema.py  views.py
friendship/web/api/monitoring/: __init__.py
